--- a/homepage.html
+++ b/homepage.html
@@ -19,7 +19,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"
         integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="contact.html" class="html">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
                     <li> <a href="#rooms" class="nav-link">Rooms</a> </li>
                     <li> <a href="#restaurant" class="nav-link">Restaurant</a> </li>
                     <li> <a href="#gallery" class="nav-link">Gallery</a> </li>
-                    <li> <a href="#contact" class="nav-link">Contact</a> </li>
+                    <li> <a href="#contact.html" class="nav-link">Contact</a> </li>
                 </ul>
 
                 <div class="hambuger">
@@ -72,7 +72,7 @@
                     <p>Welcome to
                     <h2>Blue <span>Mo<i class="fa-solid fa-moon"></i>n</span></h2>
                     <p> The BLUE MOON hotel offers a complete experience with common areas that allow you to meet new
-                        people in a 
+                        people in a
                         unique atmosphere. Lounge area, Ping Pong table, table soccer, darts & Boiler room. </p>
                 </div>
             </div>
@@ -141,7 +141,6 @@
                         perfect place to stay. The beds have curtains and panels ensuring that your stay is private and
                         comfortable. The local transport links are great, we are located within 5 minutes walking
                         distance from either or stations.</p>
-                    <button class="btn1">READ MORE</button>
                 </div>
             </div>
         </div>
@@ -203,7 +202,6 @@
                     <h2>Rooms $ Suites</h2>
                 </div>
                 <div class="button">
-                    <button class="btn1">VIEW ALL</button>
                 </div>
             </div>
 
@@ -371,42 +369,40 @@
 
 
 
-    <section class="gallary mtop " id="gallary">
+    <section class="gallary mtop " id="gallery">
         <div class="container">
             <div class="heading_top flex1">
                 <div class="heading">
                     <h5>WELCOME TO OUR PHOTO GALLERY</h5>
                     <h2>Photo Gallery of Our Hotel</h2>
                 </div>
-                <div class="button">
-                    <button class="btn1">VIEW GALLERY</button>
-                </div>
+            </div>
             </div>
 
             <div class="owl-carousel owl-theme">
                 <div class="item">
-                    <img src="image/g1.jpg" alt="">
+                    <img src="image/g1.jpg" alt="Error Loading">
                 </div>
                 <div class="item">
-                    <img src="image/g2.jpg" alt="">
+                    <img src="image/g2.jpg" alt="Error Loading">
                 </div>
                 <div class="item">
-                    <img src="image/g3.jpg" alt="">
+                    <img src="image/g3.jpg" alt="Error Loading">
                 </div>
                 <div class="item">
-                    <img src="image/g4.jpg" alt="">
+                    <img src="image/g4.jpg" alt="Error Loading">
                 </div>
                 <div class="item">
-                    <img src="image/g5.jpg" alt="">
+                    <img src="image/g5.jpg" alt="Error Loading">
                 </div>
                 <div class="item">
-                    <img src="image/g6.jpg" alt="">
+                    <img src="image/g6.jpg" alt="Error Loading">
                 </div>
                 <div class="item">
-                    <img src="image/g7.jpg" alt="">
+                    <img src="image/g7.jpg" alt="Error Loading">
                 </div>
                 <div class="item">
-                    <img src="image/g8.jpg" alt="">
+                    <img src="image/g8.jpg" alt="Error Loading">
                 </div>
             </div>
 
@@ -448,15 +444,13 @@
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
 
-
     <footer>
+
         <div class="container grid top">
             <div class="box">
                 <img
                     src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/48/000000/external-hotel-hotel-services-and-city-elements-flatart-icons-flat-flatarticons-1.png" />
-                <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                    est
-                    laborum.</p>
+                <p>Also enjoy cassless payment .</p>
 
                 <p>Accepted payment methods</p>
                 <div class="payment grid">
@@ -473,15 +467,15 @@
                 <ul>
                     <li>Our Secret Island Boat Tour Is Just for You</li>
                     <li>Chill and Escape in Our Natural Shelters</li>
-                    <li>September in Luviana Hotel</li>
-                    <li>Live Music Concerts at Luviana</li>
+                    <li>September in Blue Moon Hote</li>
+                    <li>Live Music Concerts at Blue Moon Hotel</li>
                 </ul>
             </div>
 
             <div class="box">
                 <h3>For Customers</h3>
                 <ul>
-                    <li>About Luviana</li>
+                    <li>About Blue Moon Hotel</li>
                     <li>Customer Care/Help</li>
                     <li>Corporate Accounts</li>
                     <li>Financial Information</li>
@@ -493,7 +487,7 @@
                 <h3>Contact Us</h3>
 
                 <ul>
-                    <li>3015 Grand Ave, Cocount Grove, Merrick Way FL 123456</li>
+                    <li>3015 Grand Ave, Enter city, Merrick Way FL 123456</li>
                     <li><i class="far fa-envelope"></i>demoexample@gmail.com </li>
                     <li><i class="far fa-phone-alt"></i>123 456 7898 </li>
                     <li><i class="far fa-phone-alt"></i>123 456 7898 </li>
