--- a/homepage.html
+++ b/homepage.html
@@ -450,9 +450,7 @@
             <div class="box">
                 <img
                     src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/48/000000/external-hotel-hotel-services-and-city-elements-flatart-icons-flat-flatarticons-1.png" />
-                <p>Also enjoy cassless payment .</p>
-
-                <p>Accepted payment methods</p>
+                <p>Also enjoy cassless payment <br> Accepted payment methods</p>
                 <div class="payment grid">
                     <img src="https://img.icons8.com/color/48/000000/visa.png" />
                     <img src="https://img.icons8.com/color/48/000000/mastercard.png" />
