--- a/homepage.html
+++ b/homepage.html
@@ -2,8 +2,9 @@
 <html lang="en" dir="ltr">
 
 <head>
-    <title>Hotel Website</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BLUE MOON Hotel Website</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -118,7 +119,7 @@
                 </div>
             </div>
             <div class="search">
-                <input type="submit" value="SEARCH">
+                <input class="bookingg" type="submit" value="BOOK NOW">
             </div>
         </div>
     </section>
