--- a/contact.html
+++ b/contact.html
@@ -39,9 +39,9 @@
       </nav>
     </div>
   </header>
-  <div class="heading">
+  <div class="headingroom">
     <h3>contact us</h3>
-    <p><a href="index.html">home </a> <span> / contact</span></p>
+    <p><a href="home.html">Home </a> <span> / Contact</span></p>
  </div>
  
  <section class="contact">
