--- a/room.html
+++ b/room.html
@@ -60,10 +60,10 @@
   </script>
 
 
-<div class="heading">
+<div class="headingroom">
     
     <h3>Rooms $ Suites</h3>
-    <p><a href="index.html">home </a> <span> / menu</span></p>
+    <p><a href="home.html">Home </a> <span> / Room</span></p>
  </div>
  
  <section class="products">
