gallery and about page add

--- a/home.html
+++ b/home.html
@@ -150,18 +150,14 @@
         <div class="container">
             <div class="text">
                 <h2>Our Amenities</h2>
-                <p> The Hotel comprises five interconnected Victorian era buildings to form a 103 room hotel. All the
-                    rooms have
-                    been furnished with a blend of style and functionality in mind. Simple painted walls mean rooms feel
-                    light,
-                    while surfaces feature a dark wood veneer, such as bedheads, shelves and wardrobes. Each room has an
-                    en suite
-                    shower room tucked behind a white wooden door.</p>
-
+                <p>All the rooms have been furnished with a blend of style and functionality in mind. Simple painted walls mean rooms feel
+                 light, while surfaces feature a dark wood veneer, such as bedheads, shelves and wardrobes. Each room has an
+                 en suiteshower room tucked behind a white wooden door.</p>
+                   
                 <div class="content">
                     <div class="box flex">
-                        <i class="fas fa-swimming-pool"></i>
-                        <span>Swimming pool</span>
+                        <i class="fa-solid fa-wifi"></i>
+                        <span>Free Internet Acces</span>
                     </div>
                     <div class="box flex">
                         <i class="fas fa-dumbbell"></i>
@@ -169,7 +165,7 @@
                     </div>
                     <div class="box flex">
                         <i class="fas fa-spa"></i>
-                        <span>Spa & massage</span>
+                        <span>Spa</span>
                     </div>
                     <div class="box flex">
                         <i class="fas fa-ship"></i>
@@ -177,7 +173,7 @@
                     </div>
                     <div class="box flex">
                         <i class="fas fa-swimmer"></i>
-                        <span>Surfing Lessons</span>
+                        <span>Swimming Pool</span>
                     </div>
                     <div class="box flex">
                         <i class="fas fa-microphone"></i>
@@ -185,7 +181,7 @@
                     </div>
                     <div class="box flex">
                         <i class="fas fa-water"></i>
-                        <span>Diving & smorking</span>
+                        <span>Diving </span>
                     </div>
                     <div class="box flex">
                         <i class="fas fa-umbrella-beach"></i>
@@ -203,7 +199,7 @@
                     <h2>Rooms $ Suites</h2>
                 </div>
                 <div class="button">
-                    <button class="btn1"><a href="room.html">VIEW ALL</a></button>
+                    <button class="btn1"><a href="room.html">Book Now</a></button>
                 </div>
             </div>
 
@@ -215,6 +211,9 @@
                     <div class="text">
                         <h3>Deluxe Rooms</h3>
                         <p> <span>₹</span>1990 <span>/per night</span> </p>
+                        <div class="button">
+                            <button class="btn1"><a href="room.html">Book Now</a></button>
+                        </div>
                     </div>
                 </div>
                 <div class="box">
@@ -223,7 +222,10 @@
                     </div>
                     <div class="text">
                         <h3>Suites</h3>
-                        <p> <span>₹</span>1690 <span>/per night</span> </p>
+                        <p> <span>₹</span>1690 <span>/per night</span> </p><div class="button">
+                            <button class="btn1"><a href="room.html">Book Now</a></button>
+                        </div>
+
                     </div>
                 </div>
                 <div class="box">
@@ -233,6 +235,9 @@
                     <div class="text">
                         <h3>Premier Rooms</h3>
                         <p> <span>₹</span>1290 <span>/per night</span> </p>
+                        <div class="button">
+                            <button class="btn1"><a href="room.html">VIEW ALL</a></button>
+                        </div>
                     </div>
                 </div>
             </div>
