--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,26 @@
       </nav>
     </div>
   </header>
+  <script>
+    const hambuger = document.querySelector('.hambuger');
+    const navMenu = document.querySelector('.nav-menu');
+
+    hambuger.addEventListener("click", mobileMenu);
+
+    function mobileMenu() {
+      hambuger.classList.toggle("active");
+      navMenu.classList.toggle("active");
+    }
+
+    const navLink = document.querySelectorAll('.nav-link');
+    navLink.forEach((n) => n.addEventListener("click", closeMenu));
+
+    function closeMenu() {
+      hambuger.classList.remove("active");
+      navMenu.classList.remove("active");
+    }
+  </script>
+
   <div class="headingroom">
     <h3>contact us</h3>
     <p><a href="home.html">Home </a> <span> / Contact</span></p>
@@ -53,13 +73,13 @@
        </div>
  
        <form action="" method="post">
-          <h3>tell us something!</h3>
-          <input type="text" name="name" required placeholder="enter your name" maxlength="50" class="box">
-          <input type="number" name="number" required placeholder="enter your number" max="9999999999" min="0" class="box" onkeypress="if(this.value.length == 10) return false;">
-          <input type="email" name="email" required placeholder="enter your email" maxlength="50" class="box">
-          <textarea name="msg" placeholder="enter your message" required class="box" cols="30" rows="10" maxlength="500"></textarea>
-          <input type="submit" value="send message" class="btn" name="send">
-       </form>
+          <h3>Tell Us Something!</h3>
+          <input type="text" name="name" required placeholder="Enter Your Name" maxlength="50" class="box">
+          <input type="number" name="number" required placeholder="Enter Your Number" max="9999999999" class="box" onkeypress="if(this.value.length == 10) return false;">
+          <input type="email" name="email" required placeholder="Enter Your Email" maxlength="50" class="box">
+          <textarea name="msg" placeholder="Enter Your Message" required class="box" cols="30" rows="10" maxlength="500"></textarea>
+          <button class="btn1"><a href="room.html">Send Message</a></button>
+        </form>
  
     </div>
  
