--- a/home.html
+++ b/home.html
@@ -156,7 +156,7 @@ $(function(){
        <header>
            <div id="fdw">
                    <!--nav-->
-                       <nav>
+                       <nav class="nav1">
                            <ul >
                                <li>
                                    <a href="#" class="arr">BOOK NOW<span class="arrow"></span></a>
