--- a/gallery.html
+++ b/gallery.html
@@ -236,15 +236,15 @@
     <footer>
         <div class="container grid top">
           <div class="box">
-            <img src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/48/000000/external-hotel-hotel-services-and-city-elements-flatart-icons-flat-flatarticons-1.png" />
+            <img src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/48/000000/external-hotel-hotel-services-and-city-elements-flatart-icons-flat-flatarticons-1.png" alt="error"/>
             <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     
             <p>Accepted payment methods</p>
             <div class="payment grid">
-              <img src="https://img.icons8.com/color/48/000000/visa.png" />
-              <img src="https://img.icons8.com/color/48/000000/mastercard.png" />
-              <img src="https://img.icons8.com/color-glass/48/000000/paypal.png" />
-              <img src="https://img.icons8.com/fluency/48/000000/amex.png" />
+              <img src="https://img.icons8.com/color/48/000000/visa.png" alt="error"/>
+              <img src="https://img.icons8.com/color/48/000000/mastercard.png" alt="error"/>
+              <img src="https://img.icons8.com/color-glass/48/000000/paypal.png" alt="error"/>
+              <img src="https://img.icons8.com/fluency/48/000000/amex.png" alt="error" />
             </div>
           </div>
     
