--- a/about.html
+++ b/about.html
@@ -26,10 +26,10 @@
 
         <ul class="nav-menu">
           <li> <a href="index.html" class="nav-link">Home</a> </li>
-          <li> <a href="#about" class="nav-link">About</a> </li>
-          <li> <a href="#rooms" class="nav-link">Rooms</a> </li>
+          <li> <a href="about" class="nav-link">About</a> </li>
+          <li> <a href="room.html" class="nav-link">Rooms</a> </li>
           <li> <a href="#restaurant" class="nav-link">Restaurant</a> </li>
-          <li> <a href="#gallery" class="nav-link">Gallery</a> </li>
+          <li> <a href="gallery.html" class="nav-link">Gallery</a> </li>
           <li> <a href="contact.html" class="nav-link">Contact</a> </li>
         </ul>
         <div class="hambuger">
@@ -106,34 +106,7 @@
       </div>  
   </div>
 </section>  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <footer>
+<footer>
     <div class="container grid top">
       <div class="box">
         <img src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/48/000000/external-hotel-hotel-services-and-city-elements-flatart-icons-flat-flatarticons-1.png" alt="error"/>
