--- a/review.html
+++ b/review.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+       <meta charset="UTF-8">
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <title>Reviews</title>
 
-<head>
-    <meta charset="UTF-8">
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <title>Reviews</title>
+       <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+       <link rel="stylesheet" href="css/new.css">
 
-    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="css/new.css">
+    </head>
 
-</head>
-
-<body>
+    <body>
 
     <div class="container">
         <div class="board">
@@ -35,7 +33,7 @@
                             </div>
                             <div class="profile">
                                 <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60"
-                                    alt="">
+                                    alt="error">
                                 <a href="#">John V. Bellanmy</a>
                                 <span>Founder & CEO</span>
                             </div>
@@ -52,7 +50,7 @@
                             </div>
                             <div class="profile">
                                 <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60"
-                                    alt="">
+                                    alt="error">
                                 <a href="#">John V. Bellanmy</a>
                                 <span>Founder & CEO</span>
                             </div>
@@ -66,7 +64,7 @@
                             </div>
                             <div class="profile">
                                 <img src="https://images.unsplash.com/photo-1503185912284-5271ff81b9a8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60"
-                                    alt="">
+                                    alt="error">
                                 <a href="#">John V. Bellanmy</a>
                                 <span>Founder & CEO</span>
                             </div>
