--- a/room.html
+++ b/room.html
@@ -24,11 +24,11 @@
         <h1 class="logo">Hotel Blue <span>Mo<i class="fa-solid fa-moon"></i>n</span></h1>
 
         <ul class="nav-menu">
-          <li> <a href="#home.html" class="nav-link">Home</a> </li>
-          <li> <a href="#about.html" class="nav-link">About</a> </li>
-          <li> <a href="#rooms" class="nav-link">Rooms</a> </li>
+          <li> <a href="home.html" class="nav-link">Home</a> </li>
+          <li> <a href="about.html" class="nav-link">About</a> </li>
+          <li> <a href="room.html" class="nav-link">Rooms</a> </li>
           <li> <a href="#restaurant" class="nav-link">Restaurant</a> </li>
-          <li> <a href="#gallery.html" class="nav-link">Gallery</a> </li>
+          <li> <a href="gallery.html" class="nav-link">Gallery</a> </li>
           <li> <a href="contact.html" class="nav-link">Contact</a> </li>
         </ul>
         <div class="hambuger">
@@ -109,7 +109,7 @@
           <h3>Room with View</h3>
           <p> <span>₹</span>2489 <span>/per night</span> </p>
           <div class="button">
-            <button class="btn1"><a href="book now.html">Book Now</a></button>
+            <button class="btn1"><a href="availability.html">Book Now</a></button>
           </div>
         </div>
       </div>
@@ -121,7 +121,7 @@
             <h3>Premier King Room</h3>
             <p> <span>₹</span>3540 <span>/per night</span> </p>
             <div class="button">
-              <button class="btn1"><a href="book now.html">Book Now</a></button>
+              <button class="btn1"><a href="availability.html">Book Now</a></button>
             </div>
         </div>
       </div>
@@ -167,7 +167,7 @@
 
       <div class="box">
         <h3>Recent News</h3>
-        
+
         <ul>
           <li>Our Secret Island Boat Tour Is Just for You</li>
           <li>Chill and Escape in Our Natural Shelters</li>
