--- a/book now.html
+++ b/book now.html
@@ -121,10 +121,10 @@
           
                   <ul class="nav-menu">
                     <li> <a href="home.html" class="nav-link">Home</a> </li>
-                    <li> <a href="#about" class="nav-link">About</a> </li>
-                    <li> <a href="#rooms" class="nav-link">Rooms</a> </li>
+                    <li> <a href="about.html" class="nav-link">About</a> </li>
+                    <li> <a href="room.html" class="nav-link">Rooms</a> </li>
                     <li> <a href="#restaurant" class="nav-link">Restaurant</a> </li>
-                    <li> <a href="#gallery" class="nav-link">Gallery</a> </li>
+                    <li> <a href="gallery.html" class="nav-link">Gallery</a> </li>
                     <li> <a href="contact.html" class="nav-link">Contact</a> </li>
                   </ul>
                   <div class="hambuger">
