--- a/availability.html
+++ b/availability.html
@@ -168,6 +168,10 @@
              <option value="standard">Standard</option>
              <option value="deluxe">Deluxe</option>
              <option value="suite">Suite</option>
+             <option value="suite">premire</option>
+             <option value="suite">super view</option>
+             <option value="suite">luxuary room</option>
+             <option value="suite">supirior</option>
          </select>
 
         <label class="form-label" for="guests">Number of Guests:</label>
