--- a/home.html
+++ b/home.html
@@ -373,7 +373,7 @@
                     <h2>Photo Gallery of Our Hotel</h2>
                 </div>
                 <div class="button">
-                    <button class="btn1"><a href="gallery.html"> GALLERY</a></button>
+                    <button class="btn1"><a href="gallery.html" class="nav-link"> GALLERY</a></button>
                 </div>
             </div>
 
