admin and login page add vr.1

--- a/availability.html
+++ b/availability.html
@@ -8,7 +8,7 @@
         <style>
             header {
               height: 15vh;
-              background-color:  #f5deb3;
+              background-color: #fdfcfc49;
             }
             body{
              background-image: url('./image/a1.jpg');
@@ -47,13 +47,13 @@
             header ul li a {
               font-size: 1.2rem;
               font-weight: 400;
-              color: white;
+              color: rgb(6, 6, 6);
               transition: 0.5s;
               text-decoration: none;
             }
 
             header ul li a:hover {
-              color: #C1B086;
+              color: #0f3272;
             }
             h2 {
             text-align: center;
@@ -63,7 +63,7 @@
             .booking-form {
             max-width: 400px;
             margin: 0 auto;
-            background-color: #b0c4de;
+            background-color: #b0c4de9a;
             padding: 20px;
             border: 2px solid #333;
             border-radius: 20px;
