--- a/book now.html
+++ b/book now.html
@@ -8,7 +8,7 @@
     <style>
         header {
          height: 10vh;
-         background-color:#4682b4;
+         background-color:#ffffff5f;
         }
         body{
             background-image: url('./image/a2.jpg');
@@ -54,7 +54,7 @@
           }
 
         header ul li a:hover {
-           color: #C1B086;
+           color: #07205a;
            }
         h1 {
             text-align: center;
@@ -64,7 +64,7 @@
         .booking-form {
             max-width: 400px;
             margin: 0 auto;
-            background-color: #b0c4de;
+            background-color: #7896bca1;
             padding: 20px;
             border: 2px solid #333;
             border-radius: 20px;
@@ -155,7 +155,7 @@
               }
             </script>
 
-                <h2 style="color:#f0fff0 ;">book now</h2>
+                <h2 style="color:#f0fff0 ;">BOOK NOW</h2>
  
         </div>
     </header>
