--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
    
     <link rel="stylesheet" type="text/css" href="style.css" media="all" />
-    <link rel="stylesheet" type="text/css" href="demo.css" media="all" />
+    
     <style>
          button {
                background-color: #1e90ff; 
@@ -49,6 +49,9 @@
                     <li> <a href="gallery.html" class="nav-link">Gallery</a> </li>
                     <li> <a href="contact.html" class="nav-link">Contact</a> </li>
                 </ul>
+                <Div>
+                    <button class="Llog" style="background-color: rgba(248, 238, 238, 0.564); color: rgb(255, 255, 254); border-radius: 15px;"><a href="login.html">LOG IN NOW</a></button>
+                </Div>
 
                 <div class="hambuger">
                     <span class="bar"></span>
