admin&login vr2

--- a/admin.html
+++ b/admin.html
@@ -17,7 +17,7 @@
         <!-- Sidebar -->
         <div class="bg-white" id="sidebar-wrapper">
             <div class="sidebar-heading text-center py-4 primary-text fs-4 fw-bold text-uppercase border-bottom"><i
-                    class="fas fa-user-secret me-2"></i> <a href="home.html">HOME</a></div>
+                    class="fas fa-user-secret me-2"></i> <a class="home" href="home.html">HOME</a></div>
             <div class="list-group list-group-flush my-3">
                 <a href="#" class="list-group-item list-group-item-action bg-transparent second-text active"><i
                         class="fas fa-tachometer-alt me-2"></i>ADMIN</a>
