--- a/login.html
+++ b/login.html
@@ -35,8 +35,8 @@ body, html {
   border-radius: 9px;
   border-top: 10px solid #020407;
   border-bottom: 10px solid #000000;
-  width: 400px;
-  height: 500px;
+  width: 1500px;
+  height: 700px;
   box-shadow: 1px 1px 108.8px 19.2px rgb(1, 7, 26);
 }
 
@@ -55,7 +55,7 @@ body, html {
 .box h5 {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 23px;
-  color: #0930cb;
+  color: #2f1192;
   letter-spacing: 1.5px;
   margin-top: -15px;
   margin-bottom: 70px;
@@ -104,13 +104,13 @@ a:hover {
 label span {
   height: 13px;
   width: 13px;
-  border: 2px solid #464d64;
+  border: 2px solid #ffffff;
   border-radius: 2px;
   display: inline-block;
   position: relative;
   cursor: pointer;
   float: left;
-  left: 7.5%;
+  left: 40%;
 }
 
 .btn1 {
@@ -122,19 +122,19 @@ label span {
   height: 49px;
   font-size: 16px;
   position: absolute;
-  top: 79%;
-  left: 8%;
+  top: 65%;
+  left: 39%;
   transition: 0.3s;
   cursor: pointer;
 }
 
 .btn1:hover {
-  background: #5d33e6;
+  background: #8244cd;
 }
 
 .rmb {
   position: absolute;
-  margin-left: -34%;
+  margin-left: -8%;
   margin-top: 0px;
   color: #ffffff;
   font-size: 13px;
@@ -143,13 +143,13 @@ label span {
 .forgetpass {
   position: relative;
   float: right;
-  right: 28px;
+  right: 600px;
 }
 
 .dnthave{
     position: absolute;
-    top: 92%;
-    left: 24%;
+    top: 80%;
+    left: 43%;
 }
 
 [type=checkbox]:checked + span:before {/* <-- style its checked state */
@@ -157,8 +157,8 @@ label span {
     font-size: 16px;
     content: "\f00c";
     position: absolute;
-    top: -4px;
-    color: #896cec;
+    top: -1px;
+    color: #000000;
     left: -1px;
     width: 13px;
 }
