--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
     <header class="header" id ="navigation-menu">
         <div class="container">
             <nav>
-                <h1 class="logo">Hotel Blue <br> <span>Mo<i class="fa-solid fa-moon"></i>n</span></h1>
+                <h1 class="logo">Hotel Blue  <span>Mo<i class="fa-solid fa-moon"></i>n</span></h1>
 
                 <ul class="nav-menu">
                     <li> <a href="home.html" class="nav-link">Home</a> </li>
