--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
       
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400');
 body{
-    background-image: url('./image/ami.jpg');
+    background-image: url('./image/home1.jpg');
 }
 body, html {
   font-family: 'Source Sans Pro', sans-serif;
@@ -55,7 +55,7 @@ body, html {
 .box h5 {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 23px;
-  color: #2f1192;
+  color: #5536bb;
   letter-spacing: 1.5px;
   margin-top: -15px;
   margin-bottom: 70px;
@@ -158,7 +158,7 @@ label span {
     content: "\f00c";
     position: absolute;
     top: -1px;
-    color: #000000;
+    color: #efb805;
     left: -1px;
     width: 13px;
 }
@@ -214,8 +214,8 @@ label span {
   <div class="container">
     <span class="error animated tada" id="msg"></span>
     <form name="form1" class="box" onsubmit="return checkStuff()">
-      <h4>Admin<span>Dashboard,or</span></h4>
-      <h5>Sign in to your account.</h5>
+      <h4>WELCOME TO OUR HOTEL</h4>
+      <h5>Sign in to your account</h5>
         <input type="text" name="email" placeholder="Email" autocomplete="off">
         <i class="typcn typcn-eye" id="eye"></i>
         <input type="password" name="password" placeholder="Passsword" id="pwd" autocomplete="off">
@@ -227,7 +227,7 @@ label span {
         <a href="#" class="forgetpass">Forget Password?</a>
         <input type="submit" value="Sign in" class="btn1">
       </form>
-        <a href="#" class="dnthave">Don’t have an account? Sign up</a>
+        <a href="#" class="dnthave">Don’t have an account? Register</a>
   </div> 
        <div class="footer">
      
