--- a/login.html
+++ b/login.html
@@ -1,221 +1,317 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login now</title>
-    <link rel="stylesheet" type="text/css" href="login.css">
-    <link rel="stylesheet" href="login.js">
-    <style>
-      
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400');
-body{
-    background-image: url('./image/home1.jpg');
-}
-body, html {
-  font-family: 'Source Sans Pro', sans-serif;
-  padding: 0;
-  margin: 0;
-}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>login now</title>
+  <link rel="stylesheet" type="text/css" href="login.css">
+  <link rel="stylesheet" href="login.js">
+  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400');
 
-#particles-js {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
+    header {
+      height: 10vh;
+      background-color: #ffffff5f;
+    }
 
-.container{
-  margin: 0;
-  top: 50px;
-  left: 50%;
-  position: absolute;
-  text-align: center;
-  transform: translateX(-50%);
-  background-color: #5071a784;
-  border-radius: 9px;
-  border-top: 10px solid #020407;
-  border-bottom: 10px solid #000000;
-  width: 1500px;
-  height: 700px;
-  box-shadow: 1px 1px 108.8px 19.2px rgb(1, 7, 26);
-}
+    body {
+      background-image: url('./image/a2.jpg');
+    }
 
-.box h4 {
-  font-family: 'Source Sans Pro', sans-serif;
-  color: #090909; 
-  font-size: 18px;
-  margin-top:94px;;
-}
+    .logo {
+      color: white;
+    }
 
-.box h4 span {
-  color: #010101;
-  font-weight: lighter;
-}
+    .logo img {
+      width: 130px;
+    }
 
-.box h5 {
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 23px;
-  color: #5536bb;
-  letter-spacing: 1.5px;
-  margin-top: -15px;
-  margin-bottom: 70px;
-}
+    header nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 20px;
+    }
 
-.box input[type = "text"],.box input[type = "password"] {
-  display: block;
-  margin: 20px auto;
-  background: #f7f7f9;
-  border: 0;
-  border-radius: 5px;
-  padding: 14px 10px;
-  width: 320px;
-  outline: none;
-  color: #1a1111;
+    .bar {
+      display: block;
+      width: 25px;
+      height: 3px;
+      margin: 5px auto;
+      transition: all 0.3s ease-in-out;
+      background-color: #fff;
+    }
+
+    header ul {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    header ul li {
+      margin-left: 3rem;
+      list-style: none;
+    }
+
+    header ul li a {
+      font-size: 1.2rem;
+      font-weight: 400;
+      color: white;
+      transition: 0.5s;
+      text-decoration: none;
+    }
+
+    header ul li a:hover {
+      color: #0f075a;
+      text-decoration: none;
+    }
+
+    h1 {
+      text-align: center;
+      color: #333;
+    }
+
+    body {
+      background-image: url('./image/home1.jpg');
+    }
+
+    body,
+    html {
+      font-family: 'Source Sans Pro', sans-serif;
+      padding: 0;
+      margin: 0;
+    }
+
+    #particles-js {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+    }
+
+    .container {
+      margin: 0;
+      top: 100px;
+      left: 50%;
+      position: absolute;
+      text-align: center;
+      transform: translateX(-50%);
+      background-color: #5071a745;
+      border-radius: 9px;
+      border-top: 10px solid #020407;
+      border-bottom: 10px solid #000000;
+      width: 1500px;
+      height: 700px;
+      box-shadow: 1px 1px 108.8px 19.2px rgb(1, 7, 26);
+    }
+
+    .box h4 {
+      font-family: 'Source Sans Pro', sans-serif;
+      color: #090909;
+      font-size: 18px;
+      margin-top: 94px;
+      ;
+    }
+
+    .box h4 span {
+      color: #010101;
+      font-weight: lighter;
+    }
+
+    .box h5 {
+      font-family: 'Source Sans Pro', sans-serif;
+      font-size: 23px;
+      color: #5536bb;
+      letter-spacing: 1.5px;
+      margin-top: -15px;
+      margin-bottom: 70px;
+    }
+
+    .box input[type="text"],
+    .box input[type="password"] {
+      display: block;
+      margin: 20px auto;
+      background: #f7f7f9;
+      border: 0;
+      border-radius: 5px;
+      padding: 14px 10px;
+      width: 320px;
+      outline: none;
+      color: #1a1111;
       -webkit-transition: all .2s ease-out;
-    -moz-transition: all .2s ease-out;
-    -ms-transition: all .2s ease-out;
-    -o-transition: all .2s ease-out;
-    transition: all .2s ease-out;
-  
-}
-::-webkit-input-placeholder {
-  color: #212b49;
-}
+      -moz-transition: all .2s ease-out;
+      -ms-transition: all .2s ease-out;
+      -o-transition: all .2s ease-out;
+      transition: all .2s ease-out;
 
-.box input[type = "text"]:focus,.box input[type = "password"]:focus {
-  border: 1px solid #06090d;
-  
-}
+    }
 
-a{
-  color: #ffffff;
-  text-decoration: none;
-}
+    ::-webkit-input-placeholder {
+      color: #212b49;
+    }
 
-a:hover {
-  text-decoration: underline;
-}
+    .box input[type="text"]:focus,
+    .box input[type="password"]:focus {
+      border: 1px solid #06090d;
 
- label input[type = "checkbox"] {
-  display: none; /* hide the default checkbox */
-}
+    }
 
-/* style the artificial checkbox */
-label span {
-  height: 13px;
-  width: 13px;
-  border: 2px solid #ffffff;
-  border-radius: 2px;
-  display: inline-block;
-  position: relative;
-  cursor: pointer;
-  float: left;
-  left: 40%;
-}
+    a {
+      color: #ffffff;
+      text-decoration: none;
+    }
 
-.btn1 {
-  border:0;
-  background: #7f5feb;
-  color: #fbfbfb;
-  border-radius: 100px;
-  width: 340px;
-  height: 49px;
-  font-size: 16px;
-  position: absolute;
-  top: 65%;
-  left: 39%;
-  transition: 0.3s;
-  cursor: pointer;
-}
+    a:hover {
+      text-decoration: underline;
+    }
 
-.btn1:hover {
-  background: #8244cd;
-}
+    label input[type="checkbox"] {
+      display: none;
+      /* hide the default checkbox */
+    }
 
-.rmb {
-  position: absolute;
-  margin-left: -8%;
-  margin-top: 0px;
-  color: #ffffff;
-  font-size: 13px;
-}
+    /* style the artificial checkbox */
+    label span {
+      height: 13px;
+      width: 13px;
+      border: 2px solid #ffffff;
+      border-radius: 2px;
+      display: inline-block;
+      position: relative;
+      cursor: pointer;
+      float: left;
+      left: 40%;
+    }
 
-.forgetpass {
-  position: relative;
-  float: right;
-  right: 600px;
-}
+    .btn1 {
+      border: 0;
+      background: #7f5feb;
+      color: #fbfbfb;
+      border-radius: 100px;
+      width: 340px;
+      height: 49px;
+      font-size: 16px;
+      position: absolute;
+      top: 65%;
+      left: 39%;
+      transition: 0.3s;
+      cursor: pointer;
+    }
 
-.dnthave{
-    position: absolute;
-    top: 80%;
-    left: 43%;
-}
+    .btn1:hover {
+      background: #8244cd;
+    }
 
-[type=checkbox]:checked + span:before {/* <-- style its checked state */
-    font-family: FontAwesome;
-    font-size: 16px;
-    content: "\f00c";
-    position: absolute;
-    top: -1px;
-    color: #efb805;
-    left: -1px;
-    width: 13px;
-}
+    .rmb {
+      position: absolute;
+      margin-left: -8%;
+      margin-top: 0px;
+      color: #ffffff;
+      font-size: 13px;
+    }
 
-.typcn {
-  position: absolute;
-  left: 339px;
-  top: 282px;
-  color: #3b476b;
-  font-size: 22px;
-  cursor: pointer;
-}      
+    .forgetpass {
+      position: relative;
+      float: right;
+      right: 600px;
+    }
 
-.typcn.active {
-  color: #7f60eb;
-}
+    .dnthave {
+      position: absolute;
+      top: 80%;
+      left: 43%;
+    }
 
-.error {
-  background: #ff3333;
-  text-align: center;
-  width: 337px;
-  height: 20px;
-  padding: 2px;
-  border: 0;
-  border-radius: 5px;
-  margin: 10px auto 10px;
-  position: absolute;
-  top: 31%;
-  left: 7.2%;
-  color: white;
-  display: none;
-}
+    [type=checkbox]:checked+span:before {
+      /* <-- style its checked state */
+      font-family: FontAwesome;
+      font-size: 16px;
+      content: "\f00c";
+      position: absolute;
+      top: -1px;
+      color: #efb805;
+      left: -1px;
+      width: 13px;
+    }
 
-.footer {
-    position: relative;
-    left: 0;
-    bottom: 0;
-    top: 605px;
-    width: 100%;
-    color: #78797d;
-    font-size: 14px;
-    text-align: center;
-}
+    .typcn {
+      position: absolute;
+      left: 339px;
+      top: 282px;
+      color: #3b476b;
+      font-size: 22px;
+      cursor: pointer;
+    }
 
-.footer .fa {
-  color: #7f5feb;;
-}  
-    </style>
+    .typcn.active {
+      color: #7f60eb;
+    }
+
+    .error {
+      background: #ff3333;
+      text-align: center;
+      width: 337px;
+      height: 20px;
+      padding: 2px;
+      border: 0;
+      border-radius: 5px;
+      margin: 10px auto 10px;
+      position: absolute;
+      top: 31%;
+      left: 7.2%;
+      color: white;
+      display: none;
+    }
+
+    .footer {
+      position: relative;
+      left: 0;
+      bottom: 0;
+      top: 605px;
+      width: 100%;
+      color: #78797d;
+      font-size: 14px;
+      text-align: center;
+    }
+
+    .footer .fa {
+      color: #7f5feb;
+      ;
+    }
+  </style>
 </head>
+
 <body>
-    <body id="particles-js"></body>
-<div class="animated bounceInDown">
-  <div class="container">
-    <span class="error animated tada" id="msg"></span>
-    <form name="form1" class="box" onsubmit="return checkStuff()">
-      <h4>WELCOME TO OUR HOTEL</h4>
-      <h5>Sign in to your account</h5>
+  <body id="particles-js"></body>
+  <header class="header" id="navigation-menu">
+    <div class="container1">
+      <nav>
+        <h1 class="logo"> Hotel Blue Moon</span></h1>
+
+        <ul class="nav-menu">
+          <li> <a href="home.html" class="nav-link">Home</a> </li>
+          <li> <a href="about.html" class="nav-link">About</a> </li>
+          <li> <a href="room.html" class="nav-link">Rooms</a> </li>
+          <li> <a href="#restaurant" class="nav-link">Restaurant</a> </li>
+          <li> <a href="gallery.html" class="nav-link">Gallery</a> </li>
+          <li> <a href="contact.html" class="nav-link">Contact</a> </li>
+        </ul>
+        <div class="hambuger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </nav>
+    </div>
+  </header>
+
+  <div class="animated bounceInDown">
+    <div class="container">
+      <span class="error animated tada" id="msg"></span>
+      <form name="form1" class="box" onsubmit="return checkStuff()">
+        <h4>WELCOME TO OUR HOTEL</h4>
+        <h5>Sign in to your account</h5>
         <input type="text" name="email" placeholder="Email" autocomplete="off">
         <i class="typcn typcn-eye" id="eye"></i>
         <input type="password" name="password" placeholder="Passsword" id="pwd" autocomplete="off">
@@ -227,11 +323,12 @@ label span {
         <a href="#" class="forgetpass">Forget Password?</a>
         <input type="submit" value="Sign in" class="btn1">
       </form>
-        <a href="#" class="dnthave">Don’t have an account? Register</a>
-  </div> 
-       <div class="footer">
-     
+      <a href="#" class="dnthave">Don’t have an account? Register</a>
     </div>
-</div>
+    <div class="footer">
+
+    </div>
+  </div>
 </body>
+
 </html>
