--- a/login.html
+++ b/login.html
@@ -323,7 +323,7 @@
         <a href="#" class="forgetpass">Forget Password?</a>
         <input type="submit" value="Sign in" class="btn1">
       </form>
-      <a href="#" class="dnthave">Don’t have an account? Register</a>
+      <a href="register1.html" class="dnthave">Don’t have an account? Register</a>
     </div>
     <div class="footer">
 
