--- a/dashboaed/admin.html
+++ b/dashboaed/admin.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link rel="stylesheet" href="css/admin.css"/>
+    <link rel="stylesheet" href="admin.css"/>
 
     <title>Responsive Admin Dashboard</title>
 </head>
@@ -19,24 +19,22 @@
             <div class="sidebar-heading text-center py-4 primary-text fs-4 fw-bold text-uppercase border-bottom"><i
                     class="fas fa-user-secret me-2"></i> <a class="home" href="home.html">HOME</a></div>
             <div class="list-group list-group-flush my-3">
-                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text active"><i
+                <a href="admin.html" class="list-group-item list-group-item-action bg-transparent second-text active"><i
                         class="fas fa-tachometer-alt me-2"></i>ADMIN</a>
-                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
-                        class="fas fa-project-diagram me-2"></i>GUEST</a>
-                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
-                        class="fas fa-chart-line me-2"></i>CONTACTS</a>
-                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                <a href="aboutad.html" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                        class="fas fa-project-diagram me-2"></i>ABOUT</a>
+                <a href="voucherad.html" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
                         class="fas fa-paperclip me-2"></i>VOUCHER</a>
-                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
-                        class="fas fa-shopping-cart me-2"></i>PAYMENT MODE</a>
-                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                <a href="bookingad.html" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                        class="fas fa-shopping-cart me-2"></i>BOOKING</a>
+                <a href="roomtypead.html" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
                         class="fas fa-gift me-2"></i>ROOM TYPES</a>
-                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
-                        class="fas fa-comment-dots me-2"></i>EMAIL SETTINGS</a>
-                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
-                        class="fas fa-map-marker-alt me-2"></i>FEEDBACK</a>
-                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
-                        class="fas fa-map-marker-alt me-2"></i>COLLECTION</a>  
+                <a href="contactad.html" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                        class="fas fa-comment-dots me-2"></i>CONTACT</a>
+                <a href="galleryad.html" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                        class="fas fa-gift me-2"></i>GALLERY</a>
+                <a href="resturentad.html" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                        class="fas fa-map-marker-alt me-2"></i>RESTURENT</a>  
                 <a href="#" class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"><i
                         class="fas fa-power-off me-2"></i>Logout</a>        
             </div>
@@ -49,6 +47,12 @@
                 <div class="d-flex align-items-center">
                     <i class="fas fa-align-left primary-text fs-4 me-3" id="menu-toggle"></i>
                     <h2 class="fs-2 m-0">Dashboard <br> Hotel Blue Mo<i style='font-size:24px' class='fas'>&#xf186;</i>n</span> </h2>
+                </div>
+                <div>
+                        <form class="form-inline" style="display: flex; padding-left: 800px;">
+                          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        </form>
                 </div>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -65,7 +69,7 @@
                                 <i class="fas fa-user me-2"></i>USER 
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Profile</a></li>
+                                <li><a class="dropdown-item" href="profile.html">Profile</a></li>
                                 <li><a class="dropdown-item" href="#">Settings</a></li>
                                 <li><a class="dropdown-item" href="#">Logout</a></li>
                             </ul>
@@ -104,6 +108,17 @@
                                 <p class="fs-5">BOOKING</p>
                             </div>
                             <i class="fas fa-truck fs-1 primary-text border rounded-full secondary-bg p-3"></i>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3">
+                        <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
+                            <div>
+                                <h3 class="fs-2">49</h3>
+                                <p class="fs-5">CURRENT GUEST</p>
+                            </div>
+                            <i
+                                class="fas fa-hand-holding-usd fs-1 primary-text border rounded-full secondary-bg p-3"></i>
                         </div>
                     </div>
 
@@ -151,7 +166,7 @@
                         <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
                             <div>
                                 <h3 class="fs-2">%20</h3>
-                                <p class="fs-5">SUPIRIOR SOBLE ROOM AVAILABLE</p>
+                                <p class="fs-5">SUPIRIOR ROOM AVAILABLE</p>
                             </div>
                             <i class="fas fa-chart-line fs-1 primary-text border rounded-full secondary-bg p-3"></i>
                         </div>
@@ -177,81 +192,80 @@
                                     <th scope="col" width="50">#</th>
                                     <th scope="col">Rooms</th>
                                     <th scope="col">Customer</th>
-                                    <th scope="col">Price</th>
+                                    <th scope="col">Cheekin Date</th>
+                                    <th scope="col">Cheekout Date</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <th scope="row">1</th>
-                                    <td>Television</td>
+                                    <td>Delux</td>
                                     <td>Jonny</td>
-                                    <td>$1200</td>
+                                    <td>12/09/23</td>
+                                    <td>18/09/23</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">2</th>
-                                    <td>Laptop</td>
+                                    <td>Superior</td>
                                     <td>Kenny</td>
-                                    <td>$750</td>
+                                    <td>12/09/23</td>
+                                    <td>20/09/23</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">3</th>
-                                    <td>Cell Phone</td>
+                                    <td>Suits</td>
                                     <td>Jenny</td>
-                                    <td>$600</td>
+                                    <td>09/09/23</td>
+                                    <td>16/09/23</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">4</th>
-                                    <td>Fridge</td>
+                                    <td>Delux</td>
                                     <td>Killy</td>
-                                    <td>$300</td>
+                                    <td>25/08/23</td>
+                                    <td>01/09/23</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">5</th>
-                                    <td>Books</td>
+                                    <td>Superior</td>
                                     <td>Filly</td>
-                                    <td>$120</td>
+                                    <td>21/08/23</td>
+                                    <td>30/09/23</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">6</th>
-                                    <td>Gold</td>
-                                    <td>Bumbo</td>
-                                    <td>$1800</td>
+                                    <th scope="row">1</th>
+                                    <td>Suites</td>
+                                    <td>Jonny</td>
+                                    <td>12/08/23</td>
+                                    <td>29/08/23</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">7</th>
-                                    <td>Pen</td>
-                                    <td>Bilbo</td>
-                                    <td>$75</td>
+                                    <th scope="row">2</th>
+                                    <td>Delux</td>
+                                    <td>Kenny</td>
+                                    <td>01/08/23</td>
+                                    <td>15/08/23</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">8</th>
-                                    <td>Notebook</td>
-                                    <td>Frodo</td>
-                                    <td>$36</td>
+                                    <th scope="row">3</th>
+                                    <td>Premier</td>
+                                    <td>Jenny</td>
+                                    <td>16/06/23</td>
+                                    <td>27/08/23</td>                   
                                 </tr>
                                 <tr>
-                                    <th scope="row">9</th>
-                                    <td>Dress</td>
-                                    <td>Kimo</td>
-                                    <td>$255</td>
+                                    <th scope="row">4</th>
+                                    <td>Premier King</td>
+                                    <td>Killy</td>
+                                    <td>02/06/23</td>
+                                    <td>20/06/23</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">10</th>
-                                    <td>Paint</td>
-                                    <td>Zico</td>
-                                    <td>$434</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">11</th>
-                                    <td>Carpet</td>
-                                    <td>Jeco</td>
-                                    <td>$1236</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">12</th>
-                                    <td>Food</td>
-                                    <td>Haso</td>
-                                    <td>$422</td>
+                                    <th scope="row">5</th>
+                                    <td>Luxury</td>
+                                    <td>Filly</td>
+                                    <td>22/05/23</td>
+                                    <td>23/05/23</td>
                                 </tr>
                             </tbody>
                         </table>
