--- a/register1.html
+++ b/register1.html
@@ -7,10 +7,11 @@
        <title>register</title>
        <link rel="stylesheet" href="register1.css">
        
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     </head>
     <body>
         <header>
-            <h1 class="logo">Hotel Blue <span>Mo<ion-icon name="moon"></ion-icon>n</span></h1>
+            <h1 class="logo">Hotel Blue <span>Mo<i class="fa-solid fa-moon"></i>n</span></h1>
             <nav class="navigation">
                 <a href="home.html" class="nav-link">Home</a>
                 <a href="about.html" class="nav-link">About</a>
@@ -29,11 +30,7 @@
                         <input type="text" id="uname" required>
                         <label>Username</label>
                     </div>
-                    <div class="input-box">
-                        <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                        <input type="email" id="mail" required>
-                        <label>Email</label>
-                    </div>
+                 
                     <div class="input-box">
                         <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
                         <input type="password" id="pwd" required>
